force-app/main/default/objects/Policy__c/fields/Master_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Policy_Number__c</fullName>
    <label>Master Policy Number</label>
    <type>TextArea</type>
</CustomField>