force-app/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurer__c</columns>
    <columns>Broker__c</columns>
    <columns>Master_Policy_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>