force-app/main/default/objects/Policy__c/listViews/All_Inactive_Policies.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Policies</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Insurer__c</columns>
    <columns>Broker__c</columns>
    <columns>Master_Policy_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Active</value>
    </filters>
    <label>All Inactive Policies</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>