force-app/main/default/objects/Policy__c/listViews/AllActivePolicies.listView-meta.xml
<ListView>
    <fullName>AllActivePolicies</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Insurer__c</columns>
    <columns>Broker__c</columns>
    <columns>Master_Policy_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Policies</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>